--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,16 +29,15 @@ classifiers = [
     "Natural Language :: English",
     "Operating System :: MacOS",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Multimedia :: Video",
     "Topic :: Multimedia :: Sound/Audio :: Speech",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Text Processing :: Markup :: Markdown",
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.11"
 dependencies = [
     # Core AI/ML dependencies
     "torch>=2.0.0",
@@ -93,11 +92,13 @@ write_to = "src/emuscribe/_version.py"
 
 [tool.black]
 line-length = 88
-target-version = ['py39']
+target-version = ['py311']
 
 [tool.ruff]
-target-version = "py39"
+target-version = "py311"
 line-length = 88
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
@@ -112,7 +113,7 @@ ignore = [
     "C901",  # too complex
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 
 [tool.setuptools.packages.find]
